--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "int(\"728555333\"4\" # 7285553335"
+    "int(\"728555333\" # 7285553335"
    ]
   },
   {
